<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shoe_details.ShoeDetailsFragment">


    <TextView
        android:id="@+id/shoe_details_title_id"
        style="@style/textview_bold_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/details_title" />

    <TextView
        android:id="@+id/shoe_name_label_id"
        style="@style/textview_bold_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/shoe_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_details_title_id" />

    <EditText
        android:id="@+id/shoe_name_edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/shoe_edit_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_label_id" />

    <TextView
        android:id="@+id/shoe_company_label_id"
        style="@style/textview_bold_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/shoe_company_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_id" />

    <EditText
        android:id="@+id/shoe_company_edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/shoe_edit_company_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_company_label_id" />

    <TextView
        android:id="@+id/shoe_size_label_id"
        style="@style/textview_bold_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/shoe_size_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit_id" />

    <EditText
        android:id="@+id/shoe_size_edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/shoe_edit_size_hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size_label_id" />

    <TextView
        android:id="@+id/shoe_description_label_id"
        style="@style/textview_bold_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/shoe_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_id" />

    <EditText
        android:id="@+id/shoe_description_edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/shoe_edit_description_hint"
        android:inputType="textMultiLine"
        android:minHeight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_description_label_id" />

    <Button
        android:id="@+id/save_details_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_button_label"
        android:textAllCaps="false"
        android:background="@color/sea_blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/cancel_details_chage_id"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_description_edit_id" />

    <Button
        android:id="@+id/cancel_details_chage_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/save_details_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_details_id"
        app:layout_constraintTop_toTopOf="@+id/save_details_id" />


</androidx.constraintlayout.widget.ConstraintLayout>